style: style fix on small mobile

--- a/assets/styles/pages/_dashboard.scss
+++ b/assets/styles/pages/_dashboard.scss
@@ -52,6 +52,7 @@
     .dash-info {
       @media (min-width: $large) {
         display: flex;
+        justify-content: center;
       }
     }
   }
@@ -60,7 +61,7 @@
     display: inline-block;
     margin: .45rem 0;
     @media (min-width: $medium) {
-      width: 25%;
+      width: 20%;
     }
     p {
       font-weight: 400;
@@ -82,7 +83,7 @@
     }
     lord-icon {
       display: block;
-      margin: 0 1rem 0 0;
+      margin: 0 auto;
       width: 100px;
       height: 100px;
       @media (min-width: $large) {
